refactor: rafactor domains, httperror and swagger.
